(PC-22154)[PRO] fix: add overflow-wrap for collective booking name

--- a/pro/src/screens/Bookings/BookingsRecapTable/components/CellsFormatter/BookingOfferCell.module.scss
+++ b/pro/src/screens/Bookings/BookingsRecapTable/components/CellsFormatter/BookingOfferCell.module.scss
@@ -5,6 +5,8 @@
 .booking-offer-name {
   @include fonts.button;
 
+  overflow-wrap: break-word;
+
   &:hover,
   &:focus {
     text-decoration: underline;
